--- a/blog/html-css.css
+++ b/blog/html-css.css
@@ -44,8 +44,13 @@ button {
 }
 
 h1 {
-  font-size: 50px;
+  font-size: 60px;
 }
 h2{
-  font-size: 30px;
+  font-size: 35px;
+}
+
+h3 {
+  font-size: 27px;
+  color: #0088a9;
 }
