--- a/blog/learning-plan.css
+++ b/blog/learning-plan.css
@@ -41,7 +41,14 @@
     background-color: #0088a9;
     border: none;
     border-radius:50px;
+    cursor: pointer;
+    transition: all 0.3s ease 0s;
   }
+
+  button:hover {
+    background-color: #044d5f;
+  }
+  
   
 p {
   margin-left: 15px;
