--- a/blog/JS-Fundamentals.css
+++ b/blog/JS-Fundamentals.css
@@ -32,7 +32,7 @@
   }
   
   .nav_links li a {
-      color: #0088a9
+      color: #0088a9;
   }
   
   button {
@@ -41,7 +41,7 @@
     border: none;
     border-radius:50px;
     cursor: pointer;
-  transition: all 0.3s ease 0s;
+    transition: all 0.3s ease 0s;
   }
  
   button:hover {
@@ -66,7 +66,7 @@
 
   h3 {
     margin-left: 20px;
-    margin-top: 30px
+    margin-top: 30px;
   }
 
   .blue-text {
@@ -100,3 +100,5 @@
     margin-left: 15px;
     margin-top: 20px;
   }
+
+  
