--- a/blog/main.css
+++ b/blog/main.css
@@ -68,3 +68,21 @@ h3 {
 body, li {
   margin-left: 20px;
 }
+
+.image2 {
+  height: 400px;
+  width: 550px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+p {
+  margin-right: 200px;
+}
+
+.content {
+  max-width:1600px;
+  margin: auto;
+  padding: 10px;
+}
+
