--- a/index.css
+++ b/index.css
@@ -1,66 +1,72 @@
-
-
-
-
-table {
-  font-family: arial, sans-serif;
-  border-collapse: collapse;
-  width: 50%;
+.logo {
+width: 300px;
+height: auto;
+cursor: pointer;
 }
 
-td, th {
-  border: 2px solid black;
-  text-align: middle;
-  padding: 4px;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  background-color: #24252a;
 }
 
-body {
-  background-color: whitesmoke;
+li, a, button, h1, h2, body {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  color: #ecf0f1;
+  text-decoration: none;
 }
 
-img {
-  width: 200px;
-  height 200px;
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 30px 10%;
 }
 
-.thin-green-border {
-  border-color: greenyellow;
-  border-width: 2px;
-  border-style: ridge;
+
+.nav_links li {
+  display: inline-block;
+  padding: 0px 20px;
 }
 
-.gold-background {
-  background-color: goldenrod;
+.nav_links li a {
+    color: #0088a9
 }
 
-h2 {
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  font-size: 25px;
+button {
+  padding: 9px 25px;
+  background-color: #0088a9;
+  border: none;
+  border-radius:50px;
+  cursor: pointer;
+  transition: all 0.3s ease 0s;
+
 }
 
-.blue-text {
-  color: green
+button:hover {
+  background-color: #044d5f;
+}
+
+
+h1 {
+  font-size: 60px;
+}
+
+h2{
+  font-size: 35px;
 }
 
 h3 {
-  color: blue;
-  font-size: 20px;
-  font-family: Arial, Helvetica, sans-serif;
+  font-size: 35px;
+  color: #0088a9;
+  margin-top: 20px;
 }
 
-h1 {
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  font-size: 30px;
+body, li {
+  margin-left: 20px;
 }
 
-@media (max-width: 600px) {
-  html {
-    font-size: 10px;
-  }
-}
 
-@media (max-height: 500px) {
-  h1 {
-    color:red;
-  }
-}
