--- a/blog/EQ.css
+++ b/blog/EQ.css
@@ -100,6 +100,19 @@ h3 {
   font-size: 20px;
 }
 
-@media (max-width: 600px) {
-  body {font-size: larger};
+@media (min-width: 320px) {
+  * {background-color: lightblue};
 }
+
+@media (min-width: 768px) {
+  * {background-color: lightgreen};
+}
+
+@media (min-width: 1200px) {
+  * {background-color: black};
+}
+
+@media (min-width: 1500px) {
+  * {background-color: #24252a};
+}
+
