--- a/blog/identity-values.css
+++ b/blog/identity-values.css
@@ -69,6 +69,18 @@ h1 {
   margin-left: 15px
 }
 
-@media (max-width: 600px) {
-  body {font-size: larger};
+@media (min-width: 320px) {
+  * {background-color: lightblue};
+}
+
+@media (min-width: 768px) {
+  * {background-color: lightgreen};
+}
+
+@media (min-width: 1200px) {
+  * {background-color: black};
+}
+
+@media (min-width: 1500px) {
+  * {background-color: #24252a};
 }
