--- a/blog/main.css
+++ b/blog/main.css
@@ -87,6 +87,18 @@ p {
   padding: 10px;
 }
 
-@media (max-width: 600px) {
-  body {font-size: larger};
+@media (min-width: 320px) {
+  * {background-color: lightblue};
+}
+
+@media (min-width: 768px) {
+  * {background-color: lightgreen};
+}
+
+@media (min-width: 1200px) {
+  * {background-color: black};
+}
+
+@media (min-width: 1500px) {
+  * {background-color: #24252a};
 }
