--- a/blog/margins.css
+++ b/blog/margins.css
@@ -79,6 +79,18 @@
   border-style: solid;
 }
 
-@media (max-width: 600px) {
-  body {font-size: larger};
+@media (min-width: 320px) {
+  * {background-color: lightblue};
+}
+
+@media (min-width: 768px) {
+  * {background-color: lightgreen};
+}
+
+@media (min-width: 1200px) {
+  * {background-color: black};
+}
+
+@media (min-width: 1500px) {
+  * {background-color: #24252a};
 }
